# certificate_expiration

./: .gitignore  README.md  gcal.py  main.py  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py  config.py  gcal.py  main.py
tests/: test_config.py
